--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,42 +1,53 @@
 body {
-  padding: 20px;
-  font-size: 16px;
+  font-size: 80%;
+  font-family: "Courier New", Courier, monospace;
+  letter-spacing: 0.15em;
+  background-color: #efefef;
   color: black;
   background-color: #eeeeee;
-  width: 90%;
-  max-width: 1080px;
-  margin: auto;
 }
 
-h1, h2, h3, a {
-  font-weight: normal;
-  color: inherit;
-  margin: 0px;
+#page {
+  max-width: 940px;
+  min-width: 720px;
+  margin: 10px auto 10px auto;
+  padding: 20px;
+  border: 4px double #000;
+  background-color: #ffffff;
 }
 
-h1 {
-  font-family: Helvetica, Times, serif;
-  font-size: 32px;
-  padding-bottom: 10px;
-  text-transform: capitalize;
+#logo {
+  max-width: 150px;
+  margin: 10px auto 10px auto;
 }
 
-h2 {
-  font-family: Helvetica, Times, serif;
-  font-size: 24px;
-  font-style: bold;
-  text-transform: capitalize;
+ul {
+  width: 570px;
+  padding: 15px;
+  margin: 0px auto 0px auto;
+  border-top: 2px solid #000;
+  text-align: center;
+}
+
+li {
+  display: inline;
+  margin: 0px 3px;
 }
 
 p {
-  font-family: Arial, Verdana, sans-serif;
-  line-height: 1.4em;
-  font-size: 1em;
-  color: black;
+  text-align: center;
+  width: 600px;
+  margin: 20px auto 20px auto;
+  font-weight: normal;
 }
 
-h3 {
-  font-family: Helvetica, Times, serif;
-  font-size: 18px;
-  font-style: bold;
+a {
+  color: #000000;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 6px 18px 5px 18px;
+}
+a.hover, a.on {
+  color: #cc3333;
+  background-color: #ffffff;
 }
